--- a/SPMedGroup-React/src/Pages/Login/Login.css
+++ b/SPMedGroup-React/src/Pages/Login/Login.css
@@ -4,58 +4,68 @@ body{
 }
 
 .login-background {
-    background-color: #fff;
+    background-image: url("../../Img/background.jpg");
+    
     width: 100vw;
     height: 100vh;
     display: flex;
-    justify-content: center;
-    align-items: center; 
+    
+       
 }
 
 .login-box {
-    background-color: #13C9AA;
-    width: 60%;
-    height: 70%;
-    border-radius: 15px;
+    background-color: rgba(19, 10, 143, 0.89);
+    width: 40%;
+    height: 100%;  
+    border-radius: 10px;
     display: flex;
     justify-content: center;
     box-shadow: 2px 2px 5px black;
+    float: right;
 }
 
 .login-form {
     height: 100%;
-    width: 40%;
+    width: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    ;
     align-items: center;
 }
 
 .imagem {
-    margin-bottom: 30px;
+    margin-top: 8rem;
+    margin-bottom: 10rem;
 }
 
 .input-padrao {
-    border: 0;
-    border-bottom:3px solid teal;
+    border: 0;   
     width: 100%;
-    height: 40px;
+    height: 1.7rem;
     border-radius: 5px;
-    font-size: 15pt;
+    font-size: 11pt;    
     margin-bottom: 15px;
     margin-top: 15px;
 }
 
 .login-button{
-    background-color: teal;
+    background-color: rgba(5, 197, 197, 0.671);
     border: 0;
-    width: 45%;
-    height: 50px;
+    width: 40%;
+    height: 2.3rem;
     border-radius: 6px;
     color: #fff;
-    font-size: 14pt;
+    font-size: 10pt;
     font-weight: 500;
     letter-spacing: 2px;
     margin-top: 15px;
     box-shadow: 1px 1px 5px #000;
+}
+
+
+.filter{
+    background-color: rgba(19, 10, 143, 0.59);
+    width: 100%;
+    height: 100%;
+    
 }
