--- a/SPMedGroup-React/src/Pages/Consultas/Consultas.css
+++ b/SPMedGroup-React/src/Pages/Consultas/Consultas.css
@@ -1,11 +1,10 @@
 .fundo-consultas {
-    background-color: rgb(19, 10, 143);
-    width: 100vw;
-    height: 100vh;
+    
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: center;
-  
+    align-items: center;  
     align-content: center;
 }
 
@@ -14,5 +13,10 @@
     align-items: center;
     margin-left: 0;
     margin-right: 0;
+    margin-bottom: 5rem;
 
+}
+
+body{
+    background-color: rgb(19, 10, 143);
 }
